fix contact links

--- a/index.html
+++ b/index.html
@@ -138,6 +138,25 @@
             </li>
           </ul>
         </div>
+        <div class="social-mobile col-xs-12">
+          <ul class="list-unstyled list-inline">
+            <li>
+              <a class="social-btn" href="https://github.com/golani04" role="button" target="_blank">
+                <i class="fa fa-github"></i>
+              </a>
+            </li>
+            <li>
+              <a class="social-btn" href="https://il.linkedin.com/in/leonid-spivak-53a35219" role="button" target="_blank">
+                <i class="fa fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a class="social-btn" href="https://www.freecodecamp.com/golani04"  role="button" target="_blank">
+                <i class="fa fa-fire"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
